# supply_drop_ai

./: .replit  PLAN.md  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-conten-1731794695463.txt  Pasted--analysis-summary-The-claim-includes-a-comprehensive-list-of-damaged-items-and-costs-1731971978477.txt  Pasted--analysis-summary-The-claim-includes-a-comprehensive-list-of-damaged-items-and-costs-incur-1731973285780.txt  Pasted-To-stylize-this-Tailwind-app-based-on-the-current-structure-General-Layout-Header-Logo-an-1731795217561.txt  README.md  abbot.py  app.py  auth.py  chat.py  chatgptdocs.md  database.py  database_manager.py  design_plan.md  document_processor.py  extensions.py  fema.py  filters.py  forms.py  main.py  models.py  package-lock.json  package.json  profile.py  prompt_abbot.json  prompts.json  pyproject.toml  recovery_capital_prompt.json  rejection.py  rejection_simulation_prompt.json  replit.nix  requirements.txt  resource-finder.js  resource_finder.py  resource_finder_prompt.json  server.js  system_prompt.json  tailwind.config.js  test.py  (+2 more)
migrations/versions/: 974c2c48d4de_add_file_path_to_document_model.py  f2ad1fb7dd31_initial_migration.py
static/css/: custom.css  dist.css  main.css
static/js/: chat.js  (+5 more)
templates/: _footer.html  _header.html  _nav.html  base.html  chat.html  chatbot.html  chatbot_pdf.html  checklists.html  dashboard.html  documents.html  index.html  legal.html  login.html  recovery_capital.html  rejection_simulation.html  resource_finder.html  signup.html  toxicity_assessment.html  video_player.html
(+23 files in other folders)
