[project]
name = "repl-nix-docchatgpt"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "openai>=1.54.4",
    "python-docx>=1.1.2",
    "pypdf2>=3.0.1",
    "flask-login>=0.6.3",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.1.3",
    "docx>=0.2.4",
    "flask-migrate>=4.0.7",
]
