[project]
name = "repl-nix-docchatgpt"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "openai>=1.54.4",
    "python-docx>=1.1.2",
    "pypdf2>=3.0.1",
    "flask-login>=0.6.3",
    "werkzeug>=3.1.3",
    "docx>=0.2.4",
    "flask-wtf>=1.2.2",
    "auth>=0.5.3",
    "chardet>=5.2.0",
    "extensions>=0.4",
    "sqlalchemy>=2.0.36",
]
